# Vesuvius

./: .gitignore  .replit  Cargo.toml  replit.nix  replit.sh  run.sh  test.vsv
examples/: basic.vsv  structs.vsv  test.vsv
examples/basic/: config.vsv.ron  main.vsv
examples/basic/test/: module2.vsv
ref/: types.txt
src/: cli.rs  helper.rs  main.rs  notes.rs  parser.rs  scope.rs
src/check/: mod.rs  types.rs
src/parse/: config.rs  grammer.rs  mod.rs  node.rs  node_fmt.rs
src/parser/: grammer.rs  mod.rs  node.rs  node_fmt.rs
src/run/: mod.rs  notes.rs  scope.rs  type_custom.rs  types.rs  verify.rs
src/run/types/: mod.rs  traits.rs
src/run/types/constr/: eq.rs  mod.rs  ord.rs
src/verify/: mod.rs  scope.rs  verify.rs
src/verify/types/: mod.rs  traits.rs
src/verify/types/constr/: eq.rs  ord.rs
