[package]
name    = "vesuvius"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Implementation
static_init  = "1.0"
paste        = "1.0"
# Parsing
peg          = "0.8"
line-col     = "0.2"
# Data
num-bigint   = "0.4"
num-bigfloat = "1.6"

# Something for later
#[dependencies.inkwell]
#git      = "https://github.com/TheDan64/inkwell"
#branch   = "master"
#features = [
#    "llvm12-0"
#]

[features]
trace = [
    "peg/trace"
]
